# shayari

./: .gitignore  pyproject.toml  requirements.txt  run.py
app/: main.py
app/database/: __init__.py
app/models/: item.py
app/routers/: item.py
